# labProgettazioneOS

./: .gitignore  CMakeLists.txt  main.c  mycat.c  myhead.c  padreEFiglioComunicanti-senzaClose.c  padreEFiglioComunicanti.c  padreFigliConConteggioOccorrenze.c  test.txt
