cmake_minimum_required(VERSION 3.23)
project(labProgettazioneOS C)

set(CMAKE_C_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
#add_executable(labProgettazioneOS main.c)
#add_executable(labProgettazioneOS mycat.c)
#add_executable(labProgettazioneOS myhead.c)
#add_executable(labProgettazioneOS padreFigliConConteggioOccorrenze.c)
#add_executable(labProgettazioneOS padreFigliNipotiConExec.c)
add_executable(labProgettazioneOS padreEFiglioComunicanti.c)
#add_executable(labProgettazioneOS padreEFiglioComunicanti-senzaClose.c)

target_link_libraries(${PROJECT_NAME} Threads::Threads)
